[package]
name = "rust_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
rand = "0.8.4"
lcd-pcf8574 = { git = "https://github.com/wfraser/lcd-pcf8574", branch = "master" }
lcd = { git = "https://github.com/wfraser/lcd", rev = "b62212d7441f916a9fcef7dad01279a30dcff6f8" }
chrono = "0.4.19"
